# snzip-rs

./: Cargo.toml  README.md
src/: framing.rs  lib.rs  snappy.rs
