[package]
name = "snzip"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Snappy / Snzip framing format Read/Write"
documentation = "https://github.com/kali/snzip-rs"
homepage = "https://github.com/kali/snzip-rs"
repository = "https://github.com/kali/snzip-rs"
keywords = ["snappy", "snzip", "framing", "compression", "decompression" ]
license = "WTFPL"

[dependencies]
byteorder = "*"
crc = "0.3.1"
libc = "*"
docopt = "*"
rustc-serialize = "*"
